styles/main.css
/* ... */
@font-face {
  font-family: 'fira_sansblack';
  src: url('../styles/fonts/webfontkit-20200403-162736/firasans-black-webfont.woff2') format('woff2'),
    url('../styles/fonts/webfontkit-20200403-162736/firasans-black-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;

}

* {
  box-sizing: border-box;
}

/* Header: Navbar */

.sticky-nav {
  display: block;
  position: fixed;
  z-index: 99;
  top: 0;
  background-color: rgba(114, 117, 89, .9);
  height: 50px;
  width: 100%;
}

.sticky-nav li {
  display: block;
  float: right;
  padding: 0 2em;
}

.sticky-nav ul {
  list-style-type: none;
  margin: 0 4em;
  padding: 0;
  overflow: hidden;
}

.sticky-nav a {
  display: block;
  padding: 0px 5px;
  text-decoration: none;
  color: #fff;
}

li a:hover {
  background-color: #fff;
}

.cloud-button {
  background-color: #A9C2C5;
  padding: 0 1em;
  border-radius: 10px;
  height: 50px;
  text-align: center;
}



/* Header: Hero */

.hero-section {
  height: 85vh;
  width: auto;
  background-image: linear-gradient(to right, rgba(0, 0, 0, .9), transparent), url(../images/IMG_2672.jpeg);
  background-size: cover;
  display: flex;
  align-items: center;
}

.hero-img {
  color: #D3D3CE;
  padding-left: 7em;
}

.statement-name {
  font-size: 4em;
}

.mission-text {
  font-size: 1.7em;
  width: 60%;
}

h3 {
  font-size: 1.2em;
}

/* Home Page - Main Section */

#about-section {
  background-image: url(../images/paper_fibers.png);
}

.preview {
  display: flex;
  max-height: 775px;
  height: 70vh;
  padding: 75px;
}

.cloud-flexbox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-left: 75px;
}

.about-flexbox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-right: 75px;
  width: 50%
}

.container-about-pic {
  width: 50%;
  text-align: end;
}

.about-pic {
  height: -webkit-fill-available;
  max-height: 500px;
}


/* Katalogus (Cloud) Case Study */


.cloud-wrapper {
  margin: 4em;
}

h2 {
  font-family: 'fira_sanslight', Arial,
    Helvetica,
    sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 36px;
  line-height: 50px;
  color: #202616;
}

h3 {
  font-family: 'fira_sansregular',
    Arial,
    Helvetica,
    sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 27px;
  line-height: 22px;
  color: #202616;
}

p,
div,
li,
ul,
button {
  font-family: 'biryaniregular',
    Arial,
    Helvetica,
    sans-serif;
  font-weight: normal;
  font-style: normal;
  font-size: 20px;
  line-height: 32px;
  color: #202616;
}

/* Cloud - Overview tab */

.cloud-overview {
  display: grid;
  grid-template-columns: 1fr
}

.cloud-hero {
  margin-bottom: 1em;
}

.cloud-hero-img {
  place-self: center;
}

.cloud-hero-text {
  justify-self: start;
  align-self: center;
}

.cloud-hero {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.cloud-overview-lists {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 2;
  grid-row-end: 3;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-column-gap: 3em;
  border-radius: 25px;
  border: 2px solid #727559;
  padding: 1em;
  margin: 1em;
  grid-row-gap: 1em;
}

.cloud-overview-intro {
  margin: 1em 0;
}

.cloud-deliverables {
  grid-column-start: 3;
  grid-column-end: 5;
}

.cloud-deliverables>ul {
  column-count: 2;
  column-gap: 1em;
}

.cloud-overview-intro {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 3;
  grid-row-end: 4;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-column-gap: 3em;
  grid-row-gap: 1em;
}

.cloud-discovery-research {
  margin: 2em 0;
}

.cloud-tab-title {
  text-align: center;
}

.cloud-comp-analysis-title {
  justify-self: center;
  margin-top: 2em;
}

.cloud-comp-analysis {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: auto auto auto auto;
  grid-column-gap: 3em;
}

.cloud-comp-analysis-title {
  grid-column-start: 1;
  grid-column-end: 13;
  grid-row-start: 1;
  grid-row-end: 2;
}

.cloud-comp-analysis-overview {
  grid-column-start: 4;
  grid-column-end: 10;
  grid-row-start: 2;
  grid-row-end: 3;
  max-width: 600px;
  margin: 2em 0;
}

.cloud-comp-analysis-icloud {
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 3;
  grid-row-end: 4;
  max-width: 371px;
}

.cloud-comp-analysis-gdrive {
  grid-column-start: 5;
  grid-column-end: 9;
  grid-row-start: 3;
  grid-row-end: 4;
  max-width: 371px;
}

.cloud-comp-analysis-pinterest {
  grid-column-start: 9;
  grid-column-end: 13;
  grid-row-start: 3;
  grid-row-end: 4;
  max-width: 371px;
}

.cloud-comp-analysis_button {
  grid-column-start: 5;
  grid-column-end: 9;
  grid-row-start: 4;
  grid-row-end: 5;
  margin: 2em 0;
  justify-self: center;
}

/* 
.cloud-overview-intro {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 3;
  grid-row-end: 4;
} */


/* .cloud-wrapper {
  margin: 11em 3em 3em 3em;
}

.cloud-hero {
  display: flex;
}

.cloud-hero-img {
  width: 50%;
  display: flex;
  justify-content: center;
}

.cloud-hero-text {
  display: flex;
  width: 50%;
  flex-direction: column;
  justify-content: center;
  padding-left: 4.5em;
}

.cloud-hero {
  height: 400px;
}

.cloud-overview-lists {
  height: 190px;
  display: flex;
  margin-top: 1em;
  justify-content: center;
}

.cloud-roles {
  margin: 0 2em 0 2em;
}

.cloud-tools {
  margin: 0 2em 0 2em;
}

.cloud-deliverables {
  margin: 0 2em 0 2em;
}

.cloud-deliverables>ul {
  column-count: 2;
  column-gap: 1em;
}

.cloud-overview-intro {
  height: 350px;
  display: grid;
  grid-template-columns: (3, 1fr);
  column-gap: 7.75em;
  margin: 0 4em 0 4em;
}

.cloud-summary {
  grid-column-start: 1;
}

.cloud-problem {
  grid-column-start: 2;
}

.cloud-solution {
  grid-column-start: 3;
}
/* ... */

